# Vivaldi

./: CMakeLists.txt  LICENSE.txt  README.md  grammar.txt
examples/: bf-interpreter.vv  fixedpoint.vv  gcd.vv  lisp.vv  primes.vv  types.vv  xml.c  xml_example.vv
include/: vivaldi.h
src/: CMakeLists.txt  builtins.cpp  builtins.h  c_api.cpp  c_internal.h  expression.cpp  expression.h  gc.cpp  gc.h  get_file_contents.cpp  get_file_contents.h  lang_utils.cpp  lang_utils.h  main.cpp  messages.cpp  messages.h  opt.cpp  opt.h  parser.cpp  parser.h  repl.cpp  repl.h  run_file.cpp  symbol.cpp  symbol.h  tokenizer.cpp  utils.h  validator.cpp  value.cpp  value.h  vivaldi.h  vm.cpp  vm.h
src/ast/: array.cpp  assignment.cpp  block.cpp  cond_statement.cpp  dictionary.cpp  except.cpp  for_loop.cpp  function_call.cpp  function_definition.cpp  function_definition.h  literal.cpp  literal.h  logical_and.cpp  logical_or.cpp  member.cpp  member.h  member_assignment.cpp  member_assignment.h  method.cpp  method.h  object_creation.cpp  return_statement.cpp  try_catch.cpp  try_catch.h  type_definition.cpp  variable_declaration.cpp  while_loop.cpp
src/builtins/: .integer.cpp.swp  array.cpp  array.h  bool.cpp  boolean.h  character.cpp  character.h  dictionary.cpp  dictionary.h  exception.cpp  exception.h  file.cpp  file.h  floating_point.cpp  floating_point.h  function.cpp  function.h  integer.cpp  integer.h  nil.cpp  object.cpp  object.h  range.cpp  range.h  regex.cpp  regex.h  string.cpp  string.h  symbol.cpp  symbol.h  type.cpp  type.h
src/gc/: alloc.h  allocated_block_list.cpp  allocated_block_list.h  block_list.cpp  block_list.h  free_block_list.cpp  free_block_list.h  managed_ptr.cpp  managed_ptr.h  object_list.h
src/utils/: dumb_ptr.h  dynamic_library.h  error.h  hash_map.h  lang.cpp  lang.h  memory.cpp  memory.h  string_helpers.cpp  string_helpers.h  vector_ref.h
src/value/: .function.cpp.swp  array.cpp  array.h  array_iterator.cpp  array_iterator.h  basic_function.cpp  basic_function.h  basic_object.cpp  basic_object.h  blob.cpp  blob.h  boolean.cpp  boolean.h  builtin_function.cpp  builtin_function.h  dictionary.cpp  dictionary.h  exception.cpp  exception.h  file.cpp  file.h  floating_point.cpp  floating_point.h  function.cpp  function.h  integer.cpp  integer.h  method.cpp  method.h  nil.cpp  nil.h  object.cpp  object.h  opt_functions.cpp  opt_functions.h  partial_function.cpp  partial_function.h  range.cpp  range.h  regex.cpp  (+9 more)
src/vm/: call_frame.cpp  call_frame.h  instruction.cpp  instruction.h  run.cpp  run.h
test/: CMakeLists.txt  array.vv  assert.vv  class.vv  dict.vv  except.vv  float.vv  hash_map.cpp  integer.vv  iteration.vv  logic.vv  operator.vv  output.h  ranges.vv  recursion.vv  regex.vv  return.vv  standalone.vv  string.vv  string_helpers.cpp  test.vv  validator.cpp  values.cpp  vector_ref.cpp  vm_instrs.cpp
test/vv/: array.vv  assert.vv  class.vv  dict.vv  except.vv  float.vv  functional.vv  integer.vv  iteration.vv  logic.vv  regex.vv  return.vv  standalone.vv  string.vv
